sshme-in/apps/keycloak/destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: dr-keycloak
spec:
  host: keycloak.apps.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
