sshme-in/apps/keycloak/route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: keycloak-oidc-route
  annotations:
    gethomepage.dev/href: "https://keycloak.sshme.in"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Central OIDC Provider
    gethomepage.dev/group: Infra
    gethomepage.dev/icon: https://www.svgrepo.com/show/331455/keycloak.svg
    gethomepage.dev/app: keycloak-oidc-route
    gethomepage.dev/name: Keycloak
    gethomepage.dev/pod-selector: ""
spec:
  parentRefs:
    - name: default-gateway
      namespace: istio-ingress
  hostnames:
    - keycloak.sshme.in
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: keycloak
          port: 8080
